// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Signals > analysis 'automation/joannwalsh' 1`] = `
{
  "classification": "automation",
  "flags": [
    {
      "detail": "21 comments to 21 different repos in 1.3 minutes (16.2 comments/min)",
      "label": "Issue comment spam",
      "points": 40,
    },
    {
      "detail": "31/31 branch creations followed by PRs within 71s",
      "label": "Automated branch/PR workflow",
      "points": 35,
    },
    {
      "detail": "6 repos forked within 24 hours",
      "label": "Multiple forks",
      "points": 26,
    },
    {
      "detail": "Account is 1097 days old (3+ years)",
      "label": "Established account",
      "points": -10,
    },
    {
      "detail": "Uneven day-of-week activity distribution suggests natural rest cycles",
      "label": "Human activity patterns",
      "points": -5,
    },
  ],
  "profile": {
    "age": 1097,
    "repos": 134,
  },
  "score": 14,
}
`;

exports[`Signals > analysis 'automation/reedpurdy' 1`] = `
{
  "classification": "organic",
  "flags": [
    {
      "detail": "13 repos forked within 24 hours",
      "label": "Many recent forks",
      "points": 51,
    },
    {
      "detail": "Account is 1372 days old (3+ years)",
      "label": "Established account",
      "points": -10,
    },
    {
      "detail": "77-day activity gap (bots don't take breaks)",
      "label": "Extended activity hiatus",
      "points": -10,
    },
    {
      "detail": "Uneven day-of-week activity distribution suggests natural rest cycles",
      "label": "Human activity patterns",
      "points": -5,
    },
  ],
  "profile": {
    "age": 1372,
    "repos": 125,
  },
  "score": 74,
}
`;

exports[`Signals > analysis 'automation/sheilaleffler' 1`] = `
{
  "classification": "organic",
  "flags": [
    {
      "detail": "14/20 branch creations followed by PRs within 41s",
      "label": "Automated branch/PR workflow",
      "points": 35,
    },
    {
      "detail": "36-day activity gap",
      "label": "Activity hiatus",
      "points": -5,
    },
    {
      "detail": "Uneven day-of-week activity distribution suggests natural rest cycles",
      "label": "Human activity patterns",
      "points": -5,
    },
  ],
  "profile": {
    "age": 397,
    "repos": 31,
  },
  "score": 75,
}
`;

exports[`Signals > analysis 'user/claudiaschoen' 1`] = `
{
  "classification": "organic",
  "flags": [
    {
      "detail": "8 different repos merged their PRs",
      "label": "Accepted contributions across many repos",
      "points": -20,
    },
    {
      "detail": "Account is 4994 days old (5+ years)",
      "label": "Long-standing account",
      "points": -20,
    },
    {
      "detail": "6 outbound code reviews on others' PRs",
      "label": "Code review contributor",
      "points": -5,
    },
    {
      "detail": "6 inline review comments on others' code",
      "label": "Inline code reviewer",
      "points": -5,
    },
    {
      "detail": "Uneven day-of-week activity distribution suggests natural rest cycles",
      "label": "Human activity patterns",
      "points": -5,
    },
  ],
  "profile": {
    "age": 4994,
    "repos": 536,
  },
  "score": 100,
}
`;

exports[`Signals > analysis 'user/elenahowe' 1`] = `
{
  "classification": "organic",
  "flags": [
    {
      "detail": "Account is 3221 days old (5+ years)",
      "label": "Long-standing account",
      "points": -20,
    },
    {
      "detail": "53 outbound code reviews on others' PRs",
      "label": "Active code reviewer",
      "points": -10,
    },
    {
      "detail": "Uneven day-of-week activity distribution suggests natural rest cycles",
      "label": "Human activity patterns",
      "points": -5,
    },
  ],
  "profile": {
    "age": 3221,
    "repos": 859,
  },
  "score": 100,
}
`;

exports[`Signals > analysis 'user/robinsatterfield' 1`] = `
{
  "classification": "organic",
  "flags": [
    {
      "detail": "Account is 12 days old",
      "label": "Recently created",
      "points": 20,
    },
  ],
  "profile": {
    "age": 12,
    "repos": 0,
  },
  "score": 80,
}
`;

exports[`Signals > analysis 'user/shellychristiansen' 1`] = `
{
  "classification": "organic",
  "flags": [
    {
      "detail": "Account is 2353 days old (5+ years)",
      "label": "Long-standing account",
      "points": -20,
    },
    {
      "detail": "37 outbound code reviews on others' PRs",
      "label": "Active code reviewer",
      "points": -10,
    },
    {
      "detail": "15 inline review comments on others' code",
      "label": "Frequent inline reviewer",
      "points": -10,
    },
    {
      "detail": "Uneven day-of-week activity distribution suggests natural rest cycles",
      "label": "Human activity patterns",
      "points": -5,
    },
  ],
  "profile": {
    "age": 2353,
    "repos": 53,
  },
  "score": 100,
}
`;

exports[`Signals > analysis 'user/vaughnjohnston' 1`] = `
{
  "classification": "organic",
  "flags": [
    {
      "detail": "5 different repos merged their PRs",
      "label": "Accepted contributions across repos",
      "points": -10,
    },
    {
      "detail": "Account is 4576 days old (5+ years)",
      "label": "Long-standing account",
      "points": -20,
    },
    {
      "detail": "8 outbound code reviews on others' PRs",
      "label": "Code review contributor",
      "points": -5,
    },
    {
      "detail": "4 inline review comments on others' code",
      "label": "Inline code reviewer",
      "points": -5,
    },
    {
      "detail": "33-day activity gap",
      "label": "Activity hiatus",
      "points": -5,
    },
    {
      "detail": "Uneven day-of-week activity distribution suggests natural rest cycles",
      "label": "Human activity patterns",
      "points": -5,
    },
  ],
  "profile": {
    "age": 4576,
    "repos": 30,
  },
  "score": 100,
}
`;
